herbstluftwm NEWS -- History of user-visible changes
----------------------------------------------------

See the link:MIGRATION[] file for changes that introduced incompatibility to
older versions.

Current git version
-------------------

  * Client window titles (controlled by the theme attributes 'title_height',
    'title_color', 'title_font')
  * The 'lock_tag' attribute is now writable.
  * New dependencies: xft, freetype

Release 0.9.1 on 2020-12-28
---------------------------

  * Client minimization (controlled by the attribute 'minimized' of every client)
  * The 'index' attribute of tags is now writable. This allows adjusting the
    order of existing tags.
  * New child object 'focused_client' for each tag object.
  * New child object 'focused_frame' for the tiling object of each tag object.
  * New child object 'parent_frame' for each client providing the frame the client sits in
  * New command 'mirror'
  * New command 'apply_tmp_rule'
  * The 'apply_rules' command now reports parse errors
  * Reserve space for panels that do not set _NET_WM_STRUT e.g. conky windows
    of type 'dock'.
  * Only build json object doc if WITH_DOCUMENTATION is activated
  * Bug fixes:
    - When hiding windows, correctly set their WM_STATE to IconicState (we set
      it to Withdrawn state before, which means "unmanaged" and thus is wrong).
      This may require restarting pagers when upgrading hlwm live.
    - Fix crash in 'split explode'
    - 'split explode' preserves the window focus (as in v0.7.2 and before)

Release 0.9.0 on 2020-10-31
---------------------------

  * When an application fails to focus itself (because
    focus_stealing_prevention is active), then the window is marked as urgent.
  * New optional argument for the 'split' command for splitting non-leaf frames
  * Frame objects: the frame layout can be introspected via the 'tiling' object
    present in each tag, e.g.: 'tags.focus.tiling'.
  * New command 'foreach' for iterating over objects