@@ -187,6 +187,9 @@ true::
 false::
     Ignores all arguments and always returns failure, i.e. 1.
 
+help ['OBJECT'|'ATTRIBUTE']::
+    Print help on a given object or attribute.
+
 list_commands::
     Lists all available commands.
 
@@ -1487,6 +1490,12 @@ true
 $ herbstclient set_attr tags.focus.floating false
 $ herbstclient attr tags.focus.floating
 false
+----
+
+More information on an attribute or object is given by the +help+ command:
+
+----
+$ herbstclient help clients.focus
 ----
 
 Just look around to get a feeling what is there. The detailed tree content is
