@@ -9,6 +9,7 @@ Current git version
 
   * Client window titles (controlled by the theme attributes 'title_height',
     'title_color', 'title_font')
+  * New command 'help' for live documentation on the object tree
   * The 'lock_tag' attribute is now writable.
   * New dependencies: xft, freetype
 
